Download link available for nodes
