# src/main/java/io/github/skybby15/allround/DTO/Node/NodeDownloadUrlResponse.java
@@ -1,0 +1,6 @@
+package io.github.skybby15.allround.DTO.Node;
+
+public record NodeDownloadUrlResponse(
+    String downloadUrl
+) {
+}
